--- a/Html/Lesson_2/styles2.css
+++ b/Html/Lesson_2/styles2.css
@@ -41,7 +41,7 @@ p{
 id's are identified as #idname in css */
 
 .firstparagraph{ 
-    background-color: purple;
+    background-color: blue;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
